browser/css/cool.css
/* ... */
#toolbar-logo {
	width: 0;
}

/* Hide hamburger except on mobile phones */
#toolbar-hamburger {
	width: 0;
}

/* Hide back btn except on mobile phones */
#toolbar-mobile-back {
	width: 0;
}

#mobile-edit-button {
	justify-content: center;
	align-items: center;
	position: absolute;
	width: 56px;
	height: 56px;
	right: 16px;
	bottom: 16px;
	background-color: var(--color-primary);
	border-radius: 50%;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	z-index: 1001;
	transform: scale(1);
	transition: transform 0.5s;
	display: none;
}

#mobile-edit-button.impress.portrait {
	bottom: 70px;
}

#mobile-edit-button-image {
	width: var(--btn-size);
	height: var(--btn-size);
	background: url('images/baseline-edit-24px.svg') no-repeat center !important;
	transform: rotate(0deg);
	transition: transform 0.5s;
}
#mobile-edit-button:active {
	transform: scale(1.2);
}
#mobile-edit-button:active > #mobile-edit-button-image {
	transform: rotate(45deg);
}

.cool-font {
	font-family: var(--cool-font) !important;
	font-size: var(--default-font-size) !important;
	font-weight: normal !important;
	padding: 3px 5px 3px 3px;
	color: var(--color-main-text);
}

#search-input {
	font-size: var(--default-font-size);
	box-sizing: border-box;
	min-width: 100px;
	width: 200px;
	height: 22px;
	background: var(--color-background-lighter);
}
#search-input:focus {
	background-color: var(--color-background);
	border-color: var(--color-primary) !important;
}
#search-input:hover {
	border: 1px solid var(--color-border-darker) !important;
}
#search-input::placeholder {
	color: var(--color-main-text);
}

@media screen and (max-width: 500px) {
	#search-input {
		width: 100px;
	}
}


.cool-character {
	table-layout: fixed;
	font: 17px/1.5 'Helvetica Neue', Arial, Helvetica, sans-serif;
	text-align: center;
}

.cool-character td {
	width: 20px;
}

.annotation-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/note.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	outline: none;
}

.cool-scrolled {
	overflow: auto;
}

.cool-mobile-container {
	top: 30px;
	margin: 0;
	width: 1px;
	opacity: 0;
}

.cool-context-down {
	border: 1px solid var(--color-border-dark);
	background-color: var(--color-background-dark);
}

.cool-mobile-input {
	width: 1px;
	padding: 0px;
	border: 0px;
}

/* Important to override context-menu-icon's font-family here otherwise, jquery-contextmenu.css
 * will try to load its own font file which is not available in dist/ */
.context-menu-icon::before {
	font-family: var(--cool-font) !important;
	content: '\2713';
	color: var(--color-main-text) !important;
}
.context-menu-icon-lo-checkmark:before {
	content: '\2713';
}

.context-menu-hover {
	background-color: var(--color-background-darker) !important;
	color: var(--color-text-darker) !important;
}

.context-menu-hover > span > a {
	color: var(--color-text-darker);
}
.context-menu-submenu:after {
	border-color: transparent transparent transparent var(--color-text-darker) !important;
}

/* With RTL write direction the arrow of the context menu's submenu should be flipped */

[dir='rtl'] .context-menu-submenu:after {
	right: unset;
	left: .5em;
	border-color: transparent var(--color-text-darker) transparent transparent;
	border-width: .25em .25em .25em 0;
}


#mobile-wizard {
	display: none;
}

.mobile-wizard-content .cool-annotation {
	max-width: none;
}

.cool-annotation {
	position: fixed;
	text-align: center;
	user-select: text;
	-moz-user-select: text;
	-webkit-user-select: text;
	-ms-user-select: text;
	z-index: 12;
	width: min-content;
	min-width: 250px;
	transition: left .25s;
}

.cool-annotation.annotation-pop-up {
	/* Make sure the comment card is not cropped if the window is narrow: */
	max-width: 95%;
	max-height: 95%;
	width: 66ch;
	/* Centered align comment in TS, we cannot align it here with position relative */
	z-index: 1000;
}
.cool-annotation.annotation-pop-up:not(.annotation-active) > .cool-annotation-content-wrapper {
	margin-right: 8px;
}
.cool-annotation.annotation-pop-up.annotation-active {
	transition: transform 400ms cubic-bezier(0.2,0,0,1), box-shadow 400ms cubic-bezier(0.2,0,0,1);
	will-change: transform, box-shadow;
	box-shadow: 0 0 0 1000px rgba(var(--doc-type),0.15);
}

.cool-annotation.tracked-deleted-comment-show {
	opacity: 0.5;
}

.cool-annotation.tracked-deleted-comment-hide {
	display: none;
}

.cool-annotation > .modalpopup {
	max-height: initial !important;
}

.cool-annotation-content-wrapper, .cool-annotation-redline-content-wrapper {
	padding: 12px 8px;
	font-family: var(--cool-font) !important;
	font-size: var(--default-font-size);
	text-align: left;
	background-color: var(--color-background-lighter);
	box-shadow: 0 0 3px var(--color-box-shadow);
	color: var(--color-main-text);
	border: none;
	border-radius: var(--border-radius);
	width: auto;
	display: flex;
	flex-direction: column;
	row-gap: 8px;
}

.annotation-active.annotation-pop-up .cool-annotation-content-wrapper {
	font-size: var(--medium-font-size);
}

.cool-annotation-author-header {
	display: inline-flex;
	align-items: center;
	width: 100%;
}

.cool-annotation-footer {
	display: inline-flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}

.cool-annotation:not(.annotation-active) .cool-annotation-content-wrapper:hover,
.cool-annotation:not(.annotation-active) .cool-annotation-redline-content-wrapper:hover {
	color: var(--color-text-dark);
}

.annotation-active.modify-annotation-container .cool-annotation-content-wrapper,
.annotation-active.reply-annotation-container .cool-annotation-content-wrapper {
	width: auto;
}

.cool-annotation-content {
	line-height: 1.4;
	max-height: var(--annotation-input-size);
	overflow: auto;
	scrollbar-color: var(--scrollbar-color);
	scrollbar-width: var(--scrollbar-width);
	min-width: 200px;
}
/* ... */

